Begin writing eia docs

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,10 @@
-# Introduction
+# Project Eia
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Ever since I was 12-13 I loved interpreters! One of my friend recommended the book [Crafting Interpreters](https://craftinginterpreters.com/)
+by Robert Nystrom which taught me basic foundational ideas and mechanics of an interpreter. Even before I discovered this book,
+I had spent a lot of days creating interpreters (which where not so good, but okay!)
 
-## What is Nextra?
+Originally part of <b>`lang-jam`</b> hosted by HackClub! Also part of Arcade <b>\<3</b>, that gave me immense boost of
+productivity and long dedication required.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+This website aims to document all the features and working of Eia64!
