--- a/pages/standard-lib/standard-classes.mdx
+++ b/pages/standard-lib/standard-classes.mdx
@@ -1,10 +1,4 @@
-# Std lib
-
-What? Eia has a std lib? Yes!! 😲
-
-In Eia, primitive data types have an associated std-lib, namely `string`, `eint`, `array`, `etype` (for `Type`).\
-While you can still operate on primitive types, you won't be able to use standard methods unless you include the associated
-standard library.
+# Std classes
 
 We use the `include` keyword to load an external class. It could be static or non-static.\
 An example of including `string` std-lib:
