--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,13 @@
 # Project Eia
  
-Ever since I was 12-13 I loved interpreters! One of my friend recommended the book [Crafting Interpreters](https://craftinginterpreters.com/)
-by Robert Nystrom which taught me basic foundational ideas and mechanics of an interpreter. Even before I discovered this book,
-I had spent a lot of days creating interpreters (which where not so good, but okay!)
+Ever since I was 12–13, I've loved interpreters!
+One of my friends recommended the book [Crafting Interpreters](https://craftinginterpreters.com/)
+by Robert Nystrom which taught me basic foundational ideas and mechanics of an interpreter.
+Even before I discovered this book,
+I had spent a lot of days creating interpreters (which where not so good, but fun!)
 
-Originally part of <b>`lang-jam`</b> hosted by HackClub! Also part of Arcade <b>\<3</b>, that gave me immense boost of
+Originally part of <b>`lang-jam`</b> hosted by HackClub!
+Also part of Arcade <b>\<3</b>, that gave me an immense boost of
 productivity and long dedication required.
 
 This website aims to document all the features and working of Eia64!
