--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,6 +6,16 @@ by Robert Nystrom which taught me basic foundational ideas and mechanics of an i
 Even before I discovered this book,
 I had spent a lot of days creating interpreters (which where not so good, but fun!)
 
+## How does Eia work
+
+![HowEiaWorks](../public/images/HowEiaWorks.png)
+
+Eia is written in Kotlin, a JVM Language.
+Kotlin compiles down into Bytecode that is later executed by the Java Virtual
+Machine (JVM).\
+JVM is written in C++.
+So when you write code in Eia, there are three layers of abstraction the code has to go through to get executed.
+
 Originally part of <b>`lang-jam`</b> hosted by HackClub!
 Also part of Arcade <b>\<3</b>, that gave me an immense boost of
 productivity and long dedication required.
