--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -38,3 +38,9 @@ productivity and long dedication required.
 
 
 This website aims to document all the features and working of Eia64!
+
+## Links
+
+Main project repository: [XomaDev/Eia64](https://github.com/XomaDev/Eia64)
+Eia docs: [XomaDev/eia-docs](https://github.com/XomaDev/eia-docs)
+Eia Playground SSH: [XomaDev/EiaAPI]()
