--- a/pages/syntax.mdx
+++ b/pages/syntax.mdx
@@ -1,7 +1,7 @@
 # Syntax
 
 Eia64 draws inspiration from the lovely syntax of Kotlin and many other languages like Go. ☘️\
-It is a strongly typed language, with emphases on explicit data type programing, while also featuring fully automatic
+It is a strongly typed language, with emphases on explicit data type programing, while also featuring a fully automatic
 type resolution system (which was a big milestone for me!)
 
 A lot of cool example source files can be found at [Eia64/examples](https://github.com/XomaDev/Eia64/tree/main/examples).
