--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -41,6 +41,6 @@ This website aims to document all the features and working of Eia64!
 
 ## Links
 
-Main project repository: [XomaDev/Eia64](https://github.com/XomaDev/Eia64)
-Eia docs: [XomaDev/eia-docs](https://github.com/XomaDev/eia-docs)
-Eia Playground SSH: [XomaDev/EiaAPI]()
+Main project repository: [XomaDev/Eia64](https://github.com/XomaDev/Eia64)\
+Eia docs: [XomaDev/eia-docs](https://github.com/XomaDev/eia-docs)\
+Eia Playground SSH: [XomaDev/EiaAPI](https://github.com/XomaDev/EiaAPI)
