--- a/pages/standard-lib/standard-methods.mdx
+++ b/pages/standard-lib/standard-methods.mdx
@@ -24,12 +24,12 @@ Formating a string with args
 ```swift copy
 let name = "Melon"
 println( format("Hello %s!", name) )
-; prints "Hello Melon!"
+// prints "Hello Melon!"
 ```
 
 `format()` method is the exact same as `String.format()`! That's what's called under the hood.
 
 ```kotlin copy
-println(typeOf("Melon") == type::String)              ; true
-println(typeOf(arrayOf(5, 2)) == type::Array<Int>)    ; true
+println(typeOf("Melon") == type::String)              // true
+println(typeOf(arrayOf(5, 2)) == type::Array<Int>)    // true
 ```
