--- a/pages/syntax/functions.mdx
+++ b/pages/syntax/functions.mdx
@@ -70,9 +70,9 @@ fn greet(name: String) {
 There are modifiers, a default `private` modifier and `visible` (public) modifier:
 
 ```kotlin copy
-; Visible to only the current class
+// Visible to only the current class
 private fn calculate(xPos: Int, yPos: Int, zPos: Int) { .. }
 
-; Visible to everyone that imports the class
+// Visible to everyone that imports the class
 fn calculate(x: Int, y: Int): Int { ... }
 ```
